merges 0.6 branch back into trunk